--- a/index.html
+++ b/index.html
@@ -1,31 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo List</title>
-    <link rel="stylesheet" href="style.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>To-Do list</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	 <div class="container">
 
-    <div class="container">
         <form class="form">
-          <h1>
-              NEW TODO
-            </h1>
-          <div class="todo"> 
-              <input class="" name="text" id="text" type="text" placeholder="Add Todo" />
-            <button class="add" id="add-task-btn">Add</button>
-          </div>
-          
+            <label for="input" id="title">New Todo</label>
+            <input type="text" id="input">
+            <button class="btn" id="button">Add Todo</button>
         </form>
-        <h1>
-          My Todo List
-        </h1>
-        <div id="listBox" class="todo-list"></div>
-      </div>
-    
-    <script src="script.js"></script>
+        <h2>My Todo List</h2>
+        <div class="todoList" id="result">
+        </div>
+    </div>
+	
+
+ <script src="script.js"></script>
 </body>
 </html>
